mool/tests/compile/fail/filterable_invalid_op.stderr
error: Unknown literal value `contains` at op
  --> tests/compile/fail/filterable_invalid_op.rs:15:5
   |
15 |     #[filter(op = "contains", column = "title")]
   |     ^
